--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@ h2 > b {
              fire-big 3s linear 1 alternate; 
 }
 
+#bill {
+  height: calc(100% - 230px);
+  overflow-y: auto;
+}
+
 #bill .bill-pic {
   background-color: white;
   border: 1px solid black;
@@ -225,6 +230,7 @@ h2 > b {
   -webkit-animation: burn 1.5s linear infinite alternate,
              page-burn 3s linear 1 alternate;; 
 }
+
 
  </style>
 
