--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ body {
 #ryan {
   background-image: url(ryan-laugh-soft.png);
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: center center;
   background-size: auto 100%;
-  width: 100%; height: 100%;
+  width: 30%; height: 100%;
   position: absolute;
   top: 0; left: 0;
 }
