--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Brought to you by concerned American citizens
+       who have benefited from the Affordable Care Act.
+       https://github.com/jwoglom/ryancare
+  -->
   <title>Ryancare - The American Health Care Act</title>
   <script type="text/javascript" src="jquery.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans|Open+Sans:400i|Open+Sans:800b" rel="stylesheet" />
@@ -397,6 +401,21 @@ h2 > b {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     Subsection b of section four thousand two of the Patient Protection and Affordable Care Act as amended by section five thousand nine of the twenty first century cures act is amended, in paragraph 2, by adding. And. At the end, and in paragraph 3, by striking each of fiscal years 2018 and 2019 and inserting fiscal year 2018 and by striking the semicolon at the end and inserting a period and by striking paragraphs 4 through 8. Of the funds made available by section four thousand two, the unobligated balance at the end of fiscal year 2018 is rescinded. Effective as if included in the enactment of the Medicare Access and chip reauthorization act of 2015, paragaph 1 of section two twenty one a of such act is amended by inserting. And an additional four hundred twenty two million dollars for fiscal year 2017. After 2017. Notwithstanding section five oh four ay, nineteen oh two a twenty-three, nineteen oh three ay, two thousand two, two thousand five ay four, twenty one oh two a seven, or twenty one oh five ay one of the Social Security Act, or the terms of any Medicaid waiver in effect on the date of enactment of this Act that is approved under section eleven fifteen or nineteen fifteen of the Social Security Act, for the one year period beginning on the date of the enactment of this Act, no federal funds provided from a program referred to in this subsection that is considered direct spending for any year may be made available to a state for payments to a prohibited entity, whether made directly to the prohibited entity or through a managed care organization under contract with the state. In this section, the term "prohibited entity" means en entity, including its affiliates, subsidiaries, successors, and clinics, that, as of the date of enactment of this act, is an organization described in section five oh one see three of the Internal revenue code of nineteen eighty six and exempt from tax under section five oh one ae of such code, is an essential community provider described in section one fifty six dot two thirty five of title forty five of the code of federal regulations as in effect on the date of enactment of this act, that is primarily engaged in family planning services, reproductive health, and related medical care, and providse for abortions, other than an abortion if the pregnancy is the result of an act of rape or incest, or in the case where a woman sufers from a physical disorder, physical injury, or physical illness that would, as certiifed by a physician, place the woman in danger of death unless an abortion is performed including a life-endangering physical condition caused by or arising from the pregnancy itself, and for which the total amount of federal and state expenditures under the medicaid program unter title nineteen of the social security act in fiscal year twenty fourteen made directly to the entity and to any affiliates, subsidiaries, successors, or clinics of the entity as part of a nationwide health care provide network, exceeded three hundred fifty million.
   </marquee>
-  <audio src="ryancare.mp3" autoplay controls=0 style="display: none"></audio>
+  <audio autoplay preload controls=0 loop="loop" style="display: none">
+    <source src="ryancare.ogg" type="audio/ogg" />
+    <source src="ryancare.mp3" type="audio/mpeg" />
+  </audio>
+
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-10599170-8', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
