--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ body {
   width: 30%; height: 100%;
   position: absolute;
   top: 0; left: 0;
+
+  overflow-x: none;
 }
 
 #content {
@@ -274,6 +276,7 @@ h2 > b {
   left: 0;
   width: 100%;
   padding: 4px;
+  box-sizing: border-box;
 }
 
 
