--- a/index.html
+++ b/index.html
@@ -290,6 +290,9 @@ h2 > b {
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   font-size: 30px;
+  box-sizing: border-box;
+  padding: 10px;
+  padding-bottom: 0;
 }
 
 #number-destroyed span {
