--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        who have benefited from the Affordable Care Act.
        https://github.com/jwoglom/ryancare
   -->
-  <title>Ryancare - The American Health Care Act</title>
+  <title>RYANCARE - The American Health Care Act</title>
   <script type="text/javascript" src="jquery.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans|Open+Sans:400i|Open+Sans:800b" rel="stylesheet" />
 
@@ -29,8 +29,8 @@
   <meta name="theme-color" content="#ffffff">
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Ryancare - The American Health Care Act">
-  <meta property="og:description" content="The American Health Care Act is a plan to drive down costs, encourage competition, and give every American access to quality, affordable health insurance.">
+  <meta property="og:title" content="RYANCARE - The American Health Care Act">
+  <meta property="og:description" content="Paul Ryan and the GOP are trying to destroy your health insurance. Don't let them win.">
   <meta property="og:url" content="http://ryan.care/">
   <meta property="og:image" content="http://ryan.care/icons/android-icon-192x192.png">
 
