Add attribution for music

--- a/index.html
+++ b/index.html
@@ -500,7 +500,9 @@ section#completed-bill {
             <br />
             <button style="zoom:2" onclick="keepPlaying()">KEEP PLAYING</button>
         </center>
-
+        <br />
+        <br />
+        <p>Music: Spazzmatica Polka by Kevin MacLeod (incompetech.com) / Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a></p>
     </section>
   </div>
 
